--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,13 @@ html {
     padding: 64px 16px;
 }
 
-#content .content-section h2 {
+/* #content .content-section::after {
+    content: "";
+    display: table;
+    clear: both;
+} */
+
+#content .content-section .section-heading {
     font-size: 30px;
     font-weight: 400;
     font-family: "Segoe UI", Arial, sans-serif;
@@ -153,10 +159,118 @@ html {
 #content .content-section .about-text {
     margin: 15px 0;
     text-align: justify;
-    font-family: Lato, sans-serif;
+    line-height: 1.4;
     font-size: 15px;
 }
 
+#content .members-list {
+    padding: 32px 0;
+    overflow: hidden;
+}
+
+#content .members-list .member-item {
+    width: calc(100% / 3);
+    float: left; /*khi dùng float thì thẻ cha không ôm được thẻ con, phải sử dụng overflow:hidden*/
+    text-align: center;
+}
+
+#content .member-item .member-name {
+    line-height: 22.5px;
+    margin: 15px 0;
+}
+
+#content .member-item .member-img {
+    width: 60%;
+    border-radius: 4px;
+}
+
+.tour-section {
+    background-color: #000;
+}
+
+.tickets-list {
+    background-color: #fff;
+    margin-top: 30px;
+    color: #757575;
+    list-style: none;
+}
+
+.tickets-list li {
+    font-size: 15px;
+    padding: 8px 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+.tickets-list .sold-out {
+    background-color: #f44336;
+    color: #fff;
+    padding: 0 8px;
+    margin-left: 16px;
+    display: inline-block;
+    line-height: 22px;
+}
+
+.tickets-list .quantity {
+    float: right;
+    background-color: #000;
+    color: #fff;
+    display: inline-block;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 20px;
+}
+
+.places-list {
+    overflow: hidden;
+    margin: 32px -8px 32px -8px;
+}
+.place-item {
+    float: left;
+    width: calc(100% / 3);
+    padding: 0 8px;
+    margin-bottom: 16px;
+}
+
+.place-img {
+    width: 100%;
+    display: block;
+}
+.place-img:hover {
+    opacity: 0.6;
+}
+.place-body {
+    background-color: #fff;
+    padding: 16px;
+    font-size: 15px;
+}
+.place-heading {
+    font-size: 15px;
+    font-weight: 600;
+}
+.place-time {
+    margin-top: 15px;
+    color: #757575;
+}
+.place-desc {
+    margin: 15px 0;
+    line-height: 1.4;
+}
+.place-buy-btn {
+    margin-bottom: 16px;
+    padding: 8px 16px;
+    text-decoration-line: none;
+    display: inline-block;
+    background-color: #000;
+    color: #fff;
+    line-height: 24px;
+}
+.place-buy-btn:hover {
+    color: #000 !important;
+    background-color: #ccc !important;
+    cursor: pointer;
+}
 /* End-Content */
 #footer {
 
