--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,50 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
-  
+
+/* Common */
+.text-center {
+    text-align: center !important; /*1 giá trị thì nên dùng important*/
+}  
+
+.mt-8 {
+    margin-top: 8px !important;
+}
+
+.mt-16 {
+    margin-top: 16px !important;
+}
+
+.pull-right {
+    float: right;
+}
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.col {
+     /*khi dùng float thì thẻ cha không ôm được thẻ con, phải sử dụng overflow:hidden*/
+    float: left; 
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.col-full {
+    width: 100%;
+}
+
+.col-half {
+    width: 50%;}
+
+.col-third {
+    width: calc(100% / 3);
+    margin-bottom: 16px;
+}
+
+
+/* Main */
 #main {
   
 }  
@@ -168,18 +211,12 @@ html {
     overflow: hidden;
 }
 
-#content .members-list .member-item {
-    width: calc(100% / 3);
-    float: left; /*khi dùng float thì thẻ cha không ôm được thẻ con, phải sử dụng overflow:hidden*/
-    text-align: center;
-}
-
-#content .member-item .member-name {
+#content .member-name {
     line-height: 22.5px;
-    margin: 15px 0;
+    margin-bottom: 15px;
 }
 
-#content .member-item .member-img {
+#content .member-img {
     width: 60%;
     border-radius: 4px;
 }
@@ -224,13 +261,8 @@ html {
 
 .places-list {
     overflow: hidden;
-    margin: 32px -8px 32px -8px;
-}
-.place-item {
-    float: left;
-    width: calc(100% / 3);
-    padding: 0 8px;
-    margin-bottom: 16px;
+    margin-top: 32px;
+    margin-bottom: 48px;
 }
 
 .place-img {
@@ -257,7 +289,7 @@ html {
     margin: 15px 0;
     line-height: 1.4;
 }
-.place-buy-btn {
+.btn {
     margin-bottom: 16px;
     padding: 8px 16px;
     text-decoration-line: none;
@@ -265,13 +297,77 @@ html {
     background-color: #000;
     color: #fff;
     line-height: 24px;
+    border: none;
 }
-.place-buy-btn:hover {
+.btn:hover {
     color: #000 !important;
     background-color: #ccc !important;
     cursor: pointer;
 }
 /* End-Content */
-#footer {
 
+/* Start-Contact */
+
+.contact-content {
+    padding: 32px 0;
+    overflow: hidden;
+}
+
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+.contact-form .form-group {
+    overflow: hidden;
+}
+
+.contact-info i {
+    width: 30px;
+    display: inline-block;
+}
+/* End-Contact */
+
+/* Start-Map */
+
+.map-section img {
+    width: 100%;
+}
+/* End-Map */
+#footer {
+    padding: 64px 16px;
+    text-align: center;
+}
+
+#footer .socials-list {
+    font-size: 24px;
+}
+
+#footer .socials-list a {
+    color: rgba(0, 0, 0, 0.6);
+    text-decoration-line: none;
+}
+
+#footer .socials-list a:hover {
+    opacity: 0.4;
+}
+
+#footer .copyright {
+    font-size: 15px;
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copyright a {
+    color: rgba(0, 0, 0, 0.6);
 }
