--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -27,4 +27,11 @@
     #slider .text-description {
         display: none;
     }
+
+    .item {
+        width: 100%;
+    }
+    .contact-info-item {
+        margin-bottom: 16px;
+    }
 }
